# financial_advisor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
backend/app/: main.py
backend/app/application/use_cases/: wizard_use_cases.py
backend/app/domain/entities/: wizard_step.py
backend/app/domain/repositories/: wizard_repository.py
backend/app/infrastructure/database/: __init__.py  base.py  init_db.py
backend/app/infrastructure/models/: wizard_step_model.py
backend/app/infrastructure/repositories/: postgres_wizard_repository.py
backend/app/observalibity/: otel_config.py
backend/app/presentation/api/: dependencies.py  routes.py  schemas.py
backend/tests/: conftest.py
backend/tests/domain/: test_entities.py
backend/tests/infrastructure/repositories/: test_postgres_wizard_repository.py
backend/tests/presentation/api/: test_routes.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/wizard/: page.tsx
frontend/src/components/: InvestmentWizard.tsx
frontend/src/lib/: matomo.tsx
frontend/src/services/: api.ts
public/: index.html  manifest.json
scripts/: populate_wizard.py
src/: App.js  index.css
src/components/: InvestmentWizard.js  Navbar.js
src/pages/: InvestmentAdvice.js  InvestmentType.js  LandingPage.js
src/styles/: GlobalStyle.js
tools_configs/: otel-collector-config.yaml
tools_configs/datasources/: datasource.yml
